# nameless_vector

./: .gitignore  Cargo.toml  GROUNDING_LAYER.md  README.md  debug_model.rs  test_single_verb.rs
examples/: README.md  demo_basic.rs  demo_database_access.rs  demo_database_app_level.rs  demo_database_working.rs  demo_grounding_layer.rs  demo_performance.rs  demo_planning.rs  demo_state_validation.rs
noun_state/: ai.json  al.json  ar.json  bo.json  ca.json  cl.json  co.json  cr.json  de.json  di.json  em.json  eq.json  fr.json  gu.json  in.json  ja.json  la.json  no.json  or.json  pa.json  pe.json  ri.json  se.json  sh.json  sl.json  st.json  ta.json  te.json
src/: benchmarks.rs  database.rs  domains.rs  edge_inference.rs  frame_abstraction.rs  frame_memory.rs  goal.md  grounding.rs  inference_graph.rs  lib.rs  main.rs  observability.rs  policy.rs  quantization.rs  retrieval.rs  router.rs  schema.rs  security.rs  state_algebra.rs  temporal.rs
src/benchmarks/: hallucination_detection.rs
verb_state/: aa.json  ab.json  ac.json  ad.json  ae.json  af.json  ag.json  ah.json  ai.json  aj.json  ak.json  al.json  am.json  an.json  ao.json  ap.json  aq.json  ar.json  as.json  at.json  au.json  av.json  aw.json  ay.json  az.json  ba.json  bb.json  bc.json  bd.json  be.json  bf.json  bg.json  bh.json  bi.json  bj.json  bk.json  bl.json  bm.json  bn.json  bo.json  (+316 more)
