[package]
name = "axiom-ai"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[dependencies]
# Candle ML framework - using git versions for compatibility
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
tokenizers = "0.21"
# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# Async runtime and progress
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
indicatif = "0.17.11"
ctrlc = "3.4"
# Hugging Face integration with fallback handling
hf-hub = "0.4.3"
# JSON processing
regex = "1.10"
# Graph data structure for inference
petgraph = "0.6"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Time handling for observability
chrono = { version = "0.4", features = ["serde"] }
# Random number generation for security/request IDs
rand = "0.8"
# Candle examples utilities
candle-examples = { git = "https://github.com/huggingface/candle.git" }
# SQLite for practical database demo
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
